Adding next section of Portoflio page. The About me section unformatted with lorem ipsum. Also fixed the navbar to be able to use stylesheet when i start working on that

--- a/index.html
+++ b/index.html
@@ -8,18 +8,46 @@
     </head>
     <body>
 
-        <header>
+     <header>
         <h1>Spencer Henegar</h1>
         <nav class="navbar">
             <ul>
-                <li>About me</li>
-                <li>Work</li>
-                <li>Contact</li>
-                <li>Resume</li>
+                <li>
+                    <a href="#about-me">About me</a>
+                </li>
+                <li> 
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+                <li>
+                    <a href="#resume">Resume</a>
+                </li>
             </ul>
-
-        </nav>
+         </nav>
+    </header>
         
+         <main>
+            <section>
+                <h3>About Me</h3>
+                    <p>Lorem ipsum dolor sit amet. Qui distinctio delectus quo repellendus voluptatem ut quibusdam tempore et quia praesentium aut eaque quia.
+                         33 aliquam ipsam et excepturi exercitationem aut quod velit! Et eligendi dignissimos id voluptatem eligendi aut totam voluptatum in minima repellendus. 
+                         Quo corporis aperiam et molestias exercitationem qui officiis consequuntur eum cupiditate corrupti.
+                </p>
+            </section>
+
+            <section>
+                <h3>Work</h3>
+            </section>
+
+            <section>
+                links
+            </section>
+
+
+
+         </main>
 
 
     </header>
