adding the updated figure and format for the repo. Havent touched this much since moving forward with the style sheet

--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
             </ul>
          </nav>
     </header>
-        
+        <figure class="Profile-pic">
+
+
+        </figure>
+
+
          <main>
-            <section>
+            <section id="about me">
                 <h3>About Me</h3>
                     <p>Lorem ipsum dolor sit amet. Qui distinctio delectus quo repellendus voluptatem ut quibusdam tempore et quia praesentium aut eaque quia.
                          33 aliquam ipsam et excepturi exercitationem aut quod velit! Et eligendi dignissimos id voluptatem eligendi aut totam voluptatum in minima repellendus. 
@@ -37,11 +42,16 @@
                 </p>
             </section>
 
-            <section>
+
+
+
+
+
+            <section id="=work">
                 <h3>Work</h3>
             </section>
 
-            <section>
+            <section id="links">
                 links
             </section>
 
