adding the html that i added/corrected from the last commit

--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
         <meta charset="utf-8">
         <title>Spencer Henegar's Portfolio</title>
         <link rel="stylesheet" href="./assets/css/style.css">
-        <style>
-            .vl {
-                border-left: 10px gray;
-                height: fit-content;
-            }
-        </style>
     </head>
     <body>
 
@@ -32,6 +26,11 @@
                 </li>
             </ul>
          </nav>
+<section class="side-box">
+    <h2>welcome</h2>
+</section>
+
+
     </header>
 
 
@@ -46,15 +45,16 @@
 
 
          <section class="content">
-            <section id="about me">
-                <h2 class="vl">About Me</h2>
+            
+                <h2>About Me</h2>
+                <div class="about-me">
                     <p>Lorem ipsum dolor sit amet. Qui distinctio delectus quo repellendus voluptatem ut quibusdam tempore et quia praesentium aut eaque quia.
                          33 aliquam ipsam et excepturi exercitationem aut quod velit! Et eligendi dignissimos id voluptatem eligendi aut totam voluptatum in minima repellendus. 
                          Quo corporis aperiam et molestias exercitationem qui officiis consequuntur eum cupiditate corrupti.
                 </p>
+            </div>
+
             </section>
-
-
 
 
 
