--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Spencer Henegar's Portfolio</title>
+        <link rel="stylesheet" href="./assets/css/reset.css">
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
@@ -88,7 +89,7 @@
                     <nav class="footer-bar">
                         <ul>
                             <li>
-                                <a href="#phone">Phone: 520-867-2887</a>
+                                <a href="tel:520-867-2887">520-867-2887</a>
                             </li>
                             <li> 
                                 <a href="#https://github.com/HenegarCodes">Github</a>
