--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
      <header>
         <h1>Spencer Henegar</h1>
+
         <nav class="navbar">
             <ul>
                 <li>
@@ -26,10 +27,6 @@
                 </li>
             </ul>
          </nav>
-<section class="side-box">
-    <h2>welcome</h2>
-</section>
-
 
     </header>
 
@@ -59,17 +56,109 @@
 
 
 
-            <section id="=work">
-                <h2>Work</h2>
-                <div class="background-image">
+            <section id="=projects">
+                <div class="container-projects">
+                   <div class="header-projects">Projects</div> 
+                   <div class="projects"></div>
+
+
+
+                <div class="item-project">
+                    <div class="Surf Report">
+                        <h2 class="name"> Surf Report</h2>
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur,
+                            adipisicing elit. Tenetur, dolor in asperiores modi dolore nulla delectus 
+                            quidem iure, autem consectetur exercitationem vitae officia dolorum atque
+                            blanditiis corporis nisi facere omnis.</p>
+
+                        </div>
+                        <button class="button">
+                            <a href="#">
+                                <h3>View Project</h3>
+                            </a>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="item-project">
+                    <div class="LED-wall">
+                        <h2 class="name"> LED Wall</h2>
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur,
+                            adipisicing elit. Tenetur, dolor in asperiores modi dolore nulla delectus 
+                            quidem iure, autem consectetur exercitationem vitae officia dolorum atque
+                            blanditiis corporis nisi facere omnis.</p>
+
+                        </div>
+                        <button class="button">
+                            <a href="#">
+                                <h3>View Project</h3>
+                            </a>
+                        </button>
+                    </div>
+                </div>
+                <div class="item-project">
+                    <div class="Calculator">
+                        <h2 class="name"> Calculator</h2>
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur,
+                            adipisicing elit. Tenetur, dolor in asperiores modi dolore nulla delectus 
+                            quidem iure, autem consectetur exercitationem vitae officia dolorum atque
+                            blanditiis corporis nisi facere omnis.</p>
+
+                        </div>
+                        <button class="button">
+                            <a href="#">
+                                <h3>View Project</h3>
+                            </a>
+                        </button>
+                    </div>
+                </div>
+                <div class="item-project">
+                    <div class="Pastel-puzzle">
+                        <h2 class="name"> Pastel Puzzle</h2>
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur,
+                            adipisicing elit. Tenetur, dolor in asperiores modi dolore nulla delectus 
+                            quidem iure, autem consectetur exercitationem vitae officia dolorum atque
+                            blanditiis corporis nisi facere omnis.</p>
+
+                        </div>
+                        <button class="button">
+                            <a href="#">
+                                <h3>View Project</h3>
+                            </a>
+                        </button>
+                    </div>
+                </div>
+                <div class="item-project">
+                    <div class="Buddy-run">
+                        <h2 class="name"> Buddy Run</h2>
+                        <div class="content">
+                            <p>Lorem ipsum dolor sit amet consectetur,
+                            adipisicing elit. Tenetur, dolor in asperiores modi dolore nulla delectus 
+                            quidem iure, autem consectetur exercitationem vitae officia dolorum atque
+                            blanditiis corporis nisi facere omnis.</p>
+
+                        </div>
+                        <button class="button">
+                            <a href="#">
+                                <h3>View Project</h3>
+                            </a>
+                        </button>
+                    </div>
+                </div>
+                
+               <!--<div class="background-image">
                 <a href="https://henegarcodes.github.io/Refactor-Challenge/" class="featured-image">
 
                     <img src="./assets/images/codingimage.jpeg" alt="This is my most recent or largest project I have worked on recently.">
                 </a>
                 <p class="featured-card">Refactor Project</p>
             </div>
-
-
+        </div>
+--> 
             </section>
 
 
