Added all ID cards for the portfolio project section. I need to change it to say work. Also need to add title to it.

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
             <section id="=projects">
                 <div class="container-projects">
-                   <div class="header-projects">Projects</div> 
-                   <div class="projects"></div>
+                   <div class="header-projects">Projects</div>
+                   <div class="projects">
 
 
 
                 <div class="item-project">
-                    <div class="Surf Report">
+                    <div class="Surf-Report">
                         <h2 class="name"> Surf Report</h2>
                         <div class="content">
                             <p>Lorem ipsum dolor sit amet consectetur,
@@ -149,6 +149,7 @@
                         </button>
                     </div>
                 </div>
+                </div>
                 
                <!--<div class="background-image">
                 <a href="https://henegarcodes.github.io/Refactor-Challenge/" class="featured-image">
@@ -177,13 +178,13 @@
                     <nav class="footer-bar">
                         <ul>
                             <li>
-                                <a href="#phone">Phone: 520-867-2887</a>
+                                <a href="tel:520-867-2887">520-867-2887</a>
                             </li>
                             <li> 
-                                <a href="#https://github.com/HenegarCodes">Github</a>
+                                <a href="https://github.com/HenegarCodes">Github</a>
                             </li>
                             <li>
-                                <a href="#www.linkedin.com/in/spencerhenegar">Linkedin</a>
+                                <a href="www.linkedin.com/in/spencerhenegar">Linkedin</a>
                             </li>
                             <li>
                                 <a href="mailto:SpencerRHenegar@gmail.com">SpencerRHenegar@gmail.com</a>
