Adding changes. finally got a card image i want to provbably posiiton it to bottom left using span.

--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
 
               
                     <div class="Surf-Report">
-                        <h2 class="name"> Surf Report</h2>
-                        <div class="content">
+                        <div class="image1">
+                        <h2 class="name">Surf Report</h2>
+                        <img src="./assets/images/surf.jpg" alt="Surfing overhead pic" style="float: right;">
+                        
+                        </div>
+                        <div id="content1" class="content">
 
 
                         </div>
